# maxkit

./: LICENSE.md  README.md  pypi-description.md  pyproject.toml
.github/workflows/: lint.yml  pypi.yml  test.yml  wiki.yml
aiomax/: bot.py  buttons.py  filters.py  fsm.py  router.py  types.py  utils.py
tests/: test_deserialization_resilience.py  test_filters_none_content.py  test_handle_update_textless.py  test_low_severity_fixes.py  test_polling_and_dispatch.py  test_smoke.py
