[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-git-versioning>=2.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
lint = [
    "ruff"
]

[tool.ruff]
include = [
    "aiomax/**.py",
    "pyproject.toml",
]
fix = true
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "UP",
  "SIM",
  "ASYNC"
]

ignore = ["UP037"]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project]
name = "maxkit"
dependencies = [
    "aiohttp",
    "aiofiles"
]
dynamic = ["version"]
requires-python = ">= 3.9"
authors = [
    {name = "mbutsk", email = "mbutsk@icloud.com"},
    {name = "moontr3", email = "contact@moontr3.ru"}
]
maintainers = [
    {name = "Aleksandr Kovalko", email = "gistrec@gmail.com"}
]
description = "Asynchronous framework for Max Bot API (maintained successor of aiomax)"
readme = "pypi-description.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
    "bot",
    "api",
    "asyncio",
    "max",
    "aiomax"
]
classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]

[project.urls]
Docs = "https://github.com/gistrec/maxkit/wiki"
"Source code" = "https://github.com/gistrec/maxkit"

[tool.setuptools-git-versioning]
enabled = true
version_file = ".version"

[tool.setuptools.package-data]
"aiomax" = ["*.cer"]
